# temperature_regulator

./: ARCHITECTURE.md  CMakeLists.txt  README.md  main.cpp
src/: cooler.cpp  cooler.h  heater.cpp  heater.h  main.cpp  temp_regulator.cpp  temp_regulator.h  temp_sensor.cpp  temp_sensor.h  temp_simulator.cpp  temp_simulator.h
test/: CMakeLists.txt  cooler_test.cpp  heater_test.cpp  sensor_test.cpp
